argocd/istio-demo/users-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: microservice-app-example
    version: v1
  name: users-api
spec:
  ports:
  - port: 8083
  selector:
    service: users-api
