argocd/istio-demo/users-api/istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: users-api
spec:
  host: users-api
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: users-api
spec:
  hosts:
    - users-api
  http:
    - route:
        - destination:
            host: users-api
            subset: v1
          weight: 100
